--- a/OnlineCollegeAdmission.DAL/OnlineCollegeAdmission.DAL.csproj
+++ b/OnlineCollegeAdmission.DAL/OnlineCollegeAdmission.DAL.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CollegeRepsitory.cs" />
+    <Compile Include="CollegeRepository.cs" />
     <Compile Include="DButils.cs" />
     <Compile Include="UserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
